--- a/css/login.css
+++ b/css/login.css
@@ -47,3 +47,10 @@
   padding: 15px;
   cursor: pointer;
 }
+
+.login-button:disabled {
+  background-color: #eee;
+  color: #aaa;
+  cursor: auto;
+  ;
+}
