--- a/css/game.css
+++ b/css/game.css
@@ -22,18 +22,20 @@
   width: 100%;
   height: 100%;
   position: absolute;
+  background-size: cover;
+  background-position: center;
+  border-radius: 5px;
+  border: 2px solid #f79941;
 }
 
 .front {
   background-image: url('../images/coco.png');
-  background-size: cover;
-  background-position: center;
+  transform: rotateY(180deg);
+
 }
 
 .back {
   background-image: url('../images/back.png');
-  background-size: cover;
-  background-position: center;
   backface-visibility: hidden;
 }
 
